# caskell

./: .gitignore  Makefile  README.md  caskell.cabal
Caskell/: .directory  Bytes.hs  Compile.hs  Context.hs  CoreCompare.hs  CoreHash.hs  CoreHash_old.hs  DepGraph.hs  Hash.hs  Main.hs  PrimOpHash.hs  Tests.hs  Utility.hs
Data/Map/: MultiKey.hs
tests/: 1_literals_and_references.hs  3_data_types.hs  4_recursive_data_types.hs  5_typeclasses.hs  9_newtypes.hs  class_instance_fail.hs  scratch.hs  test1.hs  test10.hs  test2.hs  test3.hs  test4.hs  test5.hs  test6.hs  test7.hs  test8.hs
